--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
   <div class="topcontainer">
-    <img class="sun" src="images\images.png" alt="sun image">
+    <img class="sun" src="images\cloud.png" alt="sun image">
     <h1>I'm Swapnil</h1>
     <h2>A Learner,Student and a <span class="pro">Pro</span>grammer</h2>
     <img class="bottomc" src="images\cloud.png" alt="cloud">
